@@ -1,5 +1,8 @@
 Changes for APR 1.3.0
 
+  *) Implement support for apr_proc_mutex_trylock() on Unix platforms.
+     PR 38785.  [Chris Darroch <chrisd pearsoncmg.com>]
+
   *) APR_FIND_APR macro now supports customisable detailed checks on
      each installed apr. [Justin Erenkrantz, Colm MacCarthaigh]
 
